# horizon

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  bootstrap_ingestion.sh  horizon_ref.py  package-lock.json  pyproject.toml  reconstruct.sh  repair_core.sh
.github/workflows/: brand-validate.yml  ci.yml  e2e.yml  migration-badge.yml  ui-e2e.yml  visual-baseline.yml
public/: index.html
public/field/: timeline.index.json
repro-pack/: ledger.json  repro_auditor.py
schemas/: theme-tokens.schema.json
scripts/: doctor.sh  ingest_dump.sh  status
seventh-horizon-brand/: README.md  package-lock.json  package.json
seventh-horizon-brand/ci/: README.md  verify-manifests.mjs  verify-manifests.mjs.bak
seventh-horizon-brand/manifests/: theme_tokens_v1.3.1.json  theme_tokens_v1.3.3.json
seventh-horizon-ui/: .env.example  .eslintrc.json  .gitignore  .stylelintrc.json  .tmp_modal_fix.patch  IMPLEMENTATION_SUMMARY.md  MIGRATION_CHECKLIST.md  QUICKSTART.md  REFACTORING.md  index.html  p0-hardening-unified.patch  package-lock.json  package.json  playwright.config.ts  setup-vitest.ts  tsconfig.json  vite.config.ts  vitest.config.ts 
seventh-horizon-ui/docs/: ACCESSIBILITY_NOTES.md
seventh_horizon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_pipeline_smoke.py  test_plots_hash.py
tools/: build_timeline_index.py  compute_field.py  constants.py  dump_all.py  dump_classifier.py  dump_run.py  embedding.py  make_snapshot.py  mds_tie_break.py  plot_field.py  validate_timeline.py
vel/: VEL_MANIFEST.schema.json
(+77 files in other folders)
